# deep-learning-gnn-project

./: .gitignore  README.md  jobscript.sh  pyproject.toml  reproduce_results.ipynb  sweep.yaml
configs/: run.yaml  run_cps.yaml  test.yaml
configs/dataset/: qm9.yaml
configs/experiments/: gcn_simple.yaml  gin_best.yaml  gin_best_1.yaml  gin_best_1500.yaml  gin_best_20.yaml  gin_best_5.yaml  gin_ssl.yaml  gin_supervised.yaml  mean_teacher_lmbd.yaml  mean_teacher_splits.yaml
configs/experiments/ablation_gnn/: 01_gcn_baseline.yaml  02_gcn_residuals.yaml  03a_gcn_batchnorm.yaml  03b_gcn_layernorm.yaml  03c_gcn_graphnorm.yaml  04_gcn_dropout.yaml  05_gcn_cosine.yaml  06a_gcn.yaml  06b_sage.yaml  (+4 more)
configs/logger/: wandb.yaml
configs/model/: gat.yaml  gatv2.yaml  gcn.yaml  gin.yaml  mean_teacher_gcn.yaml  sage.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/scheduler/: cosine.yaml  step.yaml
configs/trainer/: cps.yaml  graph-mixup.yaml  mean-teacher-trainer.yaml  semi-supervised-ensemble.yaml
models/ablation_gnn/: 01_gcn_baseline.pt  02_gcn_residuals.pt  03a_gcn_batchnorm.pt  03b_gcn_layernorm.pt  03c_gcn_graphnorm.pt  04_gcn_dropout.pt  05_gcn_cosine.pt  06a_gcn.pt  06b_sage.pt  06c_gat.pt  06d_gin.pt  07_gin_jk.pt
models/mean_teacher/: mean_teacher_0.pt  mean_teacher_10e-3.pt  mean_teacher_10e-3_1p.pt  mean_teacher_10e-3_20p.pt  mean_teacher_10e-3_5p.pt  mean_teacher_10e-4.pt
models/y8wga45c/: model_0.pt
src/: DONTTOUCH.py  logger.py  model_utils.py  models.py  qm9.py  qm9_utils.py  run.py  run_cps.py  test.py  tester.py  trainer.py
(+42 files in other folders)
